solved all spacing issues when the return to category button is added to the sidebar upon a category click in the feed

--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -233,7 +233,7 @@
 
   .category-feed-icon {
     position: relative;
-    right: 80px;
+    right: 94px;
   }
 
   #textbox {
